--- a/src/components/Billboard/Billboard.module.css
+++ b/src/components/Billboard/Billboard.module.css
@@ -75,13 +75,12 @@
     justify-content: center;
 }
 
-.links a {
+.links button:first-child {
     background-color: #ffffff;
     color: #000000;
-    text-decoration: none;
 }
 
-.links button {
+.links button:not(:first-child) {
     background-color: rgba(109, 109, 110, 0.7);
     color: #ffffff;
 }
@@ -134,11 +133,11 @@
     opacity: 0.9;
 }
 
-.links a:hover {
+.links button:first-child:hover {
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-.links button:hover {
+.links button:not(:first-child):hover {
     background-color: rgba(109, 109, 110, 0.5);
 }
 
